syntax = "proto3";

package com.teachingstrategies.temporal.v1beta1;

service TemporalService {
  // CreateLicense starts a Temporal Workflow that will:
  // 1. Create an Org
  // 2. Create a Profile
  // 3. Create a License
  rpc CreateLicense(CreateLicenseRequest) returns (CreateLicenseResponse) {}
}

message WorkflowOptions {
  // ID - The business identifier of the workflow execution.
  // Optional: defaulted to a uuid.
  string workflow_id = 1;

  // The workflow tasks of the workflow are scheduled on the queue with this name.
  // This is also the name of the activity task queue on which activities are scheduled.
  // The workflow author can choose to override this using activity options.
  // Mandatory: No default.
  string task_queue = 2;
}

message CreateLicenseRequest {
  WorkflowOptions workflow_options = 1;
  License license = 2;
  Org org = 3;
  Profile profile = 4;
}

message CreateLicenseResponse {}

message License {
  string name = 1;
}

message Org {
  string name = 1;
}

message Profile {
  string name = 1;
}
